# Opp_Mai2025

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
include/: palindrome.h
src/: main.cpp  palindrome.cpp
tests/: test_palindrome.cpp
